<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subject">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/select"
        android:textColor="#000000"
        android:textSize="48sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/all_right"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="18dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/all"
        app:srcCompat="@drawable/fire"
        android:contentDescription="@string/flame"/>

    <ImageView
        android:id="@+id/all_left"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/all"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fire"
        android:contentDescription="@string/flame"/>

    <Button
        android:id="@+id/all"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/science" />

    <ImageView
        android:id="@+id/sci_right"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:tint="@color/sci"
        app:layout_constraintBottom_toTopOf="@+id/all_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/science"
        app:srcCompat="@drawable/science"
        android:contentDescription="@string/beaker"/>

    <ImageView
        android:id="@+id/sci_left"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:tint="@color/sci"
        app:layout_constraintBottom_toTopOf="@+id/all_left"
        app:layout_constraintEnd_toStartOf="@+id/science"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/science"
        android:contentDescription="@string/beaker"/>

    <Button
        android:id="@+id/science"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/sci"
        android:text="@string/science"
        app:layout_constraintBottom_toTopOf="@+id/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop" />

    <ImageView
        android:id="@+id/pop_left2"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:tint="@color/pop"
        app:layout_constraintBottom_toTopOf="@+id/sci_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/pop"
        app:srcCompat="@drawable/star"
        android:contentDescription="@string/star"/>

    <ImageView
        android:id="@+id/pop_left"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:tint="@color/pop"
        android:src="@drawable/star"
        app:layout_constraintBottom_toTopOf="@+id/sci_left"
        app:layout_constraintEnd_toStartOf="@+id/pop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/star"/>

    <Button
        android:id="@+id/pop"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/pop"
        android:text="@string/pop_culture"
        app:layout_constraintBottom_toTopOf="@+id/science"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geography" />

    <ImageView
        android:id="@+id/geo_right"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:scaleX="-1"
        android:tint="@color/geo"
        app:layout_constraintBottom_toTopOf="@+id/pop_left2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/geography"
        app:srcCompat="@drawable/earth"
        android:contentDescription="@string/earth"/>

    <ImageView
        android:id="@+id/geo_left"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:tint="@color/geo"
        app:layout_constraintBottom_toTopOf="@+id/pop_left"
        app:layout_constraintEnd_toStartOf="@+id/geography"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/earth"
        android:contentDescription="@string/earth"/>

    <ImageView
        android:id="@+id/math_left"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:tint="@color/math"
        app:layout_constraintBottom_toTopOf="@+id/geo_left"
        app:layout_constraintEnd_toStartOf="@+id/math"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="@string/calculator"/>

    <ImageView
        android:id="@+id/math_right"
        android:layout_width="37dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scaleX="-1"
        android:tint="@color/math"
        app:layout_constraintBottom_toTopOf="@+id/geo_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/math"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="@string/calculator"/>


    <ImageView
        android:id="@+id/hist_left"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:tint="@color/history"
        app:layout_constraintBottom_toTopOf="@+id/math_left"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@drawable/parchment"
        android:contentDescription="@string/scroll"/>

    <Button
        android:id="@+id/math"
        android:text="math"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/math"
        app:layout_constraintBottom_toTopOf="@+id/geography"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history"/>

    <Button
        android:id="@+id/history"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/history"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/math"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/hist_right"
        android:layout_width="58dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:tint="@color/history"
        app:layout_constraintBottom_toTopOf="@+id/math_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/history"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="@drawable/parchment"
        android:contentDescription="@string/scroll"/>

    <Button
        android:id="@+id/geography"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/geo"
        android:text="@string/geography"
        app:layout_constraintBottom_toTopOf="@+id/pop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math" />
</android.support.constraint.ConstraintLayout>
